     degrees of freedom are now computed from smoothing parameter 
     as described in B. Hofner, T. Hothorn, T. Kneib, M. Schmid (2011).

  o  changed computation of B-spline basis at the boundaries: 
     now also use equidistant knots in the boundaries (per default)

  o  bmono() now implements an experimental version of constraints at the
     boundaries of (monotonic) P-splines


                CHANGES in `mboost' VERSION 2.1-2 (2011-12-XX, rXXX)

  o  improved handling of missing values 
     (throws warnings and fixed a bug that occured for missings in the response)

  o  improved manual for the handling of contrasts in bols


                CHANGES in `mboost' VERSION 2.1-1 (2011-11-28, r606)

  o  new option "mboost_eps" for factor in Demmler-Reinsch orthogonalization


                CHANGES in `mboost' VERSION 2.1-0 (2011-11-15, r601)


  Base-learners

  o  added base-learners for smooth monotonic (or convex/concave)
     functions of one or two variables (bmono())

  o  added base-learners for radial basis functions (brad())

  o  added base-learners for Markov random fields (bmrf())

  o  bbs(x, cyclic = TRUE) for cyclic covariates ensures that
     predictions at the boundaries coincide and that the resulting
     function estimate is smoothly joined

  o  bols(x, intercept = FALSE) only reasonable if x is centered.
     A warning is now issued if x is not centered.

  o  changed default for degrees of freedom in bspatial()
     to df = 6

  o  added checks in bbs (and brandom) to ensure that the specified
     degrees of freedom are greater than the range of the (unpenalized)
     null space

  o  bolscw can be mixed with other base-learners (although
     not yet exported and not via the formula interface)

  o  new experimental baselearner %O% for smoothing
     matrix-values responses


  Families

  o  add Binomial(link = "probit") and general cdf's as link
     functions (experimental)

  o  added new families: